# Chaos_Pendulum

./: .gitignore  CMakeLists.txt  Chaos_Pendulum.depend  Chaos_Pendulum.pro  Chaos_PendulumApp.cpp  Chaos_PendulumApp.h  Chaos_PendulumMain.cpp  Chaos_PendulumMain.h  Chaos_Pendulum_GUI.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pendulumwidget.cpp  pendulumwidget.h  tatus  wx_pch.h
src/: main.cpp  pendulum.cpp  pendulum.hpp
src/qt-gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/util/: angle.cpp  angle.hpp  physics.cpp  physics.hpp  point.cpp  point.hpp
test/: pendulumTest.cpp  pointTest.cpp
wxsmith/: Chaos_Pendulumframe.wxs
